[package]
name = "wbtimeline"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.14"
reqwasm = "0.4.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.78"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
wasm-logger = "0.2.0"
web-sys = "0.3.56"
wee_alloc = "0.4.5"
yew = "0.19.3"
