[package]
name = "wbtimeline"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.17"
reqwasm = "0.5.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_derive = "1.0.138"
serde_json = "1.0.82"
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
wasm-logger = "0.2.0"
web-sys = "0.3.58"
wee_alloc = "0.4.5"
yew = "0.19.3"
